Write read it in textual format

--- a/spectral_clustering.ipynb
+++ b/spectral_clustering.ipynb
@@ -336,6 +336,8 @@
     }
    ],
    "source": [
+    "# performs spectral clustering on a matrix; used to compare the Python and C++ versions\n",
+    "\n",
     "from datetime import datetime\n",
     "import numpy as np\n",
     "import math\n",
