Add slanted interval labels to allelic ration chart

--- a/scripts/Paper charts.ipynb
+++ b/scripts/Paper charts.ipynb
@@ -308,8 +308,8 @@
    "id": "powered-check",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-26T10:33:22.270661Z",
-     "start_time": "2021-10-26T10:33:21.745205Z"
+     "end_time": "2021-10-26T11:26:42.265415Z",
+     "start_time": "2021-10-26T11:26:41.733391Z"
     }
    },
    "outputs": [],
@@ -332,10 +332,14 @@
     "bins=[0,0.1,0.2,0.3,0.4,0.5,0.6,0.7,0.8,0.9,1] \n",
     "# bins=[b-0.05 for b in bins]\n",
     "fig, axs = plt.subplots(1, 1, figsize=(9,6))\n",
-    "plt.hist(clones_all,  bins=bins, range=(0,1), density=False, alpha=0.5, label=[\"All cells\", \"Clone 159\", \"Clone 118\"])\n",
+    "plt.hist(clones_all,  bins=10, range=(0,1), density=False, alpha=0.5, label=[\"All cells\", \"Clone 159\", \"Clone 118\"])\n",
     "plt.legend(loc='upper right')\n",
-    "plt.xticks(bins)\n",
-    "#plt.xlim(0,1)\n",
+    "xticks=[f+0.05 for f in bins]\n",
+    "plt.xticks(xticks, rotation='45')\n",
+    "xlabels = [f'[{b}-{(float(b) + 0.1):2.1f})' for b in bins]\n",
+    "xlabels[-1]=''\n",
+    "axs.set_xticklabels(xlabels)\n",
+    "plt.xlim(0,1)\n",
     "plt.savefig('/tmp/slice_B_allelic_factor.png', format='png', bbox_inches='tight')\n",
     "plt.show()\n",
     "\n"
